--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ Authlib
 Flask
 Flask-Session
 gunicorn
+cs50
+authlib
+GroupyAPI
+--upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
