--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ gunicorn
 cs50
 authlib
 GroupyAPI
---upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
